--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies 📦
-        run: npm ci
+        run: npm install
 
       - name: Create .env file 🔑
         run: |
