--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,21 @@
 {
     "short_name": "Dopamine",
-    "name": "Dopamine Travel",
+    "name": "도파민 여행",
     "icons": [
       {
         "src": "favicon.ico",
         "sizes": "64x64 32x32 24x24 16x16",
         "type": "image/x-icon"
+      },
+      {
+        "src": "web-app-manifest-192x192.png",
+        "type": "image/png",
+        "sizes": "192x192"
+      },
+      {
+        "src": "web-app-manifest-512x512.png",
+        "type": "image/png",
+        "sizes": "512x512"
       }
     ],
     "start_url": ".",
