--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [main, master]
+    paths-ignore:    # 모든 파일 변경 시 배포되지 않도록 설정
+      - '**'         # 모든 변경 무시
   workflow_dispatch:
 
 jobs:
@@ -36,3 +38,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
+          # cname 옵션 제거 (Netlify로 전환했으므로)
