--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
@@ -21,6 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -45,6 +47,12 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "react-snap": "^1.23.0"
+  },
+  "reactSnap": {
+    "skipThirdPartyRequests": true,
+    "inlineCss": true,
+    "include": ["/", "/random", "/course"]
   }
 }
