--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -47,12 +46,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
-    "react-snap": "^1.23.0"
-  },
-  "reactSnap": {
-    "skipThirdPartyRequests": true,
-    "inlineCss": true,
-    "include": ["/", "/random", "/course"]
+    "gh-pages": "^6.3.0"
   }
 }
