feat: 완전한 SEO 최적화 구현
- 모든 페이지에 파라미터 없이도 완전한 SEO 콘텐츠 제공
- react-helmet-async로 동적 메타태그 구현
- 페이지별 맞춤 구조화된 데이터 (JSON-LD) 추가
- 파라미터 의존 페이지들에 공갈 버전 구현으로 크롤링 최적화
- 한국 검색엔진 (네이버) 최적화 추가
- 소셜 미디어 (카카오톡, 페이스북) 공유 최적화

주요 변경사항:
- SEO 컴포넌트 기능 확장 및 개선
- seoUtils.js 추가로 페이지별 메타데이터 관리
- 모든 랜덤 페이지에 파라미터 없을 때 대체 UI 구현
- sitemap.xml 업데이트
- 정적 폴백 메타태그 강화

이제 모든 크롤러가 완전한 HTML 콘텐츠를 볼 수 있음

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "echo 'Static build completed'",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -46,6 +47,37 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "react-snap": "^1.23.0"
+  },
+  "reactSnap": {
+    "inlineCss": true,
+    "minifyHtml": true,
+    "crawlFrom": "/",
+    "include": [
+      "/",
+      "/random",
+      "/random/city",
+      "/random/theme", 
+      "/course"
+    ],
+    "skipThirdPartyRequests": true,
+    "cacheAjaxRequests": false,
+    "preloadImages": true,
+    "asyncScriptTags": false,
+    "removeBlobs": true,
+    "fixWebpackChunksIssue": false,
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ],
+    "puppeteerExecutablePath": null,
+    "puppeteerIgnoreHTTPSErrors": false,
+    "publicPath": "/",
+    "minifyCss": {
+      "safe": true
+    },
+    "removeStyleTags": false,
+    "preconnectThirdParty": false
   }
 }
